# ESP32_Advertiser

./: README.md
adv_esp/: README.md
adv_esp/main/: bt_sender.c  bt_sender.h  main.c
lps-ctrl/: README.md  pyproject.toml
lps-ctrl/docs/: bridge_server_readme.md  powershell_script_readme.md  winrt_broadcaster_readme.md
lps-ctrl/examples/: lps_ctrl_ex.py  pc_adv_ex.py  tcp_example.py
lps-ctrl/scripts/: LPS_advertiser.ps1  bridge_server.py
lps-ctrl/src/lps_ctrl/: __init__.py  lps_ctrl.py  tcp_sender.py
