[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lps-ctrl"
version = "0.1.0"
description = "Light Playback System Controller for ESP32"
readme = "README.md"

dependencies = [
    "pyserial>=3.5",
    "winrt-Windows.Foundation",
    "winrt-Windows.Foundation.Collections",
    "winrt-Windows.Devices.Bluetooth",
    "winrt-Windows.Devices.Bluetooth.Advertisement",
    "winrt-Windows.Storage.Streams"
]

[project.scripts]
lps-bridge = "lps_ctrl.bridge_server:main"

[tool.setuptools.packages.find]
where = ["src"]